# ROA

./: Cargo.toml  LICENSE.md  README.md
data/entities/: test.ent.toml
fontae/: Cargo.toml  spiral.txt
fontae/src/: lib.rs
honey/: Cargo.toml
honey/src/: lib.rs
kei/: Cargo.toml  key_notes.txt
kei/src/: lib.rs  main.rs  test_key.key
shaders/: basic.frag  basic.vert  basic_tex.frag
src/: events.rs  font.rs  graphics.rs  input.rs  lib.rs  main.rs  screen.frag  screen.vert  util.rs  utilai.rs
src/components/: mod.rs  movement.rs  physics.rs
src/state/: main_state.rs  mod.rs  pause.rs
src/systems/: mod.rs  movement.rs  physics.rs  rendering.rs
tests/: main.rs
